@@ -1,3 +1,8 @@
+2009-12-20  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/examples/RcppInline/RcppInlineWithLibsExamples.r: Minor
+	  simplifications using new RcppSexp types
+
 2009-12-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.7.0
